...
          <ScrollContentView style={styles.container}>
            <View style={styles.contentContainer}>
              <Text style={[text.h1, styles.h1]}>
                {I18n.t('text_login')}
              </Text>
              <TextInput
                testID="e2e-login-username"
                value={this.state.username}
                error={usernameError}
                onChangeText={this.onUsernameChange}
                containerStyle={styles.inputContainer}
                inputStyle={styles.inputStyle}
                placeholder={I18n.t('text_placeholder_your_username')}
...
                autoCapitalize="none"
                textContentType="username"
                autoCompleteType="username"
                onSubmitEditing={this.handleOnSubmitInput(FORM_KEY_PASSWORD)}
                inputRef={this.handleInputRef(FORM_KEY_USERNAME)}/>
              <TextInput
                testID="e2e-login-password"
                value={this.state.password}
                error={passwordError}
                onChangeText={this.onPasswordChange}
                style={styles.password}
                containerStyle={styles.inputContainer}
                inputStyle={styles.inputStyle}
...
                textContentType="password"
                autoCompleteType="password"
                secureTextEntry={true}
                onSubmitEditing={this.onSubmit}
                inputRef={this.handleInputRef(FORM_KEY_PASSWORD)}/>
              <TextButton
                  testID="e2e-login-submit"
                  style={[button.primary, button.fullWidth, styles.loginButton]}
                  textStyle={button.primaryText}
                  onPress={this.onSubmit}
                  isLoading={isLoading}>
                {I18n.t('caption_login').toUpperCase()}
              </TextButton>
...
