...
        <LinearGradient colors={[$siTransparent, $siDarkBlue]} style={{ width: '100%', height: '100%' }} start={{ x: 0, y: 0 }} end={{ x: 0, y: 0.97 }}>
          <View style={[styles.container]}>
            <View style={styles.contentContainer}>
              <Image source={Images.defaults.app_logo} style={styles.appLogo} resizeMode="contain"/>
              <View style={styles.buttonContainer}>
                <TextButton
                  testID="e2e-first-contact-register"
                  style={[button.primary]}
                  textStyle={button.primaryText}
                  onPress={() => this.props.isConnected ? this.props.navigation.navigate(RegisterCredentials) : this.showNetworkAlert()}>
                  {I18n.t('caption_register').toUpperCase()}
                </TextButton>
                <TextButton
                  style={[button.secondary]}
                  textStyle={button.secondaryText}
                  onPress={() => this.props.isConnected ? this.props.navigation.navigate(QRScanner) : this.showNetworkAlert()}>
                  {I18n.t('caption_qr_scanner').toUpperCase()}
                </TextButton>
                <TextButton
                  testID="e2e-first-contact-login"
                  style={[button.secondary]}
                  textStyle={button.secondaryText}
                  onPress={() => this.props.isConnected ? this.props.navigation.navigate(LoginFromSplash) : this.showNetworkAlert()}>
                  {I18n.t('text_login').toUpperCase()}
                </TextButton>
              </View>
...
