...
const createButton = Component(
  (props: any) => compose(
    fold(props),
    view({ style: { backgroundColor: $LightBlue }}),
  )(
  textButton({
    testID: 'e2e-event-create',
    style: styles.createButton,
    textStyle: styles.createButtonText,
    onPress: props.handleSubmit(createEvent(props)),
    isLoading: props.isCreatingEvent},
    text({}, I18n.t('caption_create'))))
)
...
