...
  "title_set_wind": "Set wind",
  "title_leaderboard": "Leaderboard",
  "title_eula": "Terms and Conditions",
  "title_privacy_policy": "Privacy Policy",
  "title_expert_settings": "Expert settings",
  "title_event_creation": "Create Event",
  "title_event_details": "Event Overview",
  "title_race_details": "Race Overview",
  "title_race_course": "Race Course",
  "title_create_account_01": "Create ",
  "title_create_account_02": "Account",
  "title_create_account_03": "",
  "title_add_boat_01": "Add ",
  "title_add_boat_02": "Boat",
  "title_add_boat_03": "",
...
  "caption_new_session": "New event",
  "caption_new_team": "New boat",
  "caption_start": "Start",
  "caption_share_session": "Invite friends",
  "caption_beta_session": "BETA",
  "caption_lets_go": "Let's go!",
  "caption_save": "Save",
  "caption_login": "Login",
  "caption_register": "Register",
  "caption_need_help": "Need help?",
  "caption_create_account": "Create your account",
  "caption_add_boat": "Add boat",
  "text_confirm_delete_boat": "Would you like to delete this boat?",
...
  "caption_dont_show_again": "Don't show again",
  "caption_unsaved_changes": "You made changes that are not saved yet.",
  "caption_overwrite_courses": "Copy course",

  "error_title": "An error occurred",
  "error_unknown" : "Oops, something went wrong here.\nPlease try again!",
  "error_race_removal_confirm_title" : "Remove races?",
  "error_race_removal_confirm_message" : "The races {{races}} and all their data will be deleted permanently. This cannot be undone.",
  "error_race_removal_confirm_message_one" : "The race {{races}} and all its data will be deleted permanently. This cannot be undone.",
  "button_remove_races" : "Delete races",
  "error_event_settings_not_saved" : "The event was created, but its settings could not be saved. Please do not create it again – open it from the list instead.",
  "error_with_code" : "Oops, something went wrong here.\nPlease try again! ({{code}})",
  "error_field_required": "Field is required.",
...
  "error_regatta_access_forbidden": "You do not have permission to access this regatta.",
  "error_field_invalid_sessionname": "The event name cannot contain the following characters: /, \", ;, ?, [, ]",
  "error_load_nationalities": "Could not load nationalities",
  "error_load_boat_classes": "Could not load boat classes",
  "error_start_date_after_end_date": "Start date needs to be before the end date.",
  "error_no_name": "No name chosen. Please select a name.",
  "error_no_venue": "No location chosen. Please select a location.",
  "error_no_boat_class": "No boats class chosen. Please select a boats class.",
  "error_leaderboard_group_already_exists": "An event with this name already exists, please choose a different name.",
  "error_regatta_already_exists": "A regatta with this name exists already. Please choose another name.",
  "error_leaderboard_already_exists": "A leaderboard with this name exists already. Please choose another name.",
  "error_need_name": "Please enter your name",
  "error_need_username": "Please enter a user name",
...
  "text_low_point_scoring": "Low point scoring applies.",
  "text_contact_for_other_scoring": "Please contact us if you require any other scoring system.",
  "text_alert_for_start_tracking": "You really want to start tracking?\nEvent entry will be closed.",
  "text_alert_event_time": "This start time is outside the date range of the regatta/event. Do you want to change the event dates?",
  "text_user_is_competitor": "You are a competitor on this event",
  "caption_see_course": "See Course",
  "caption_define_course": "Define Course",
  "caption_set_time": "Set Time",
  "caption_race_set_time": "Set Time",
  "caption_course_not_defined": "No course yet",
  "caption_time_not_set": "No start time yet",
  "text_discard_after": "Discard after Races",
  "caption_discard_after_races": "Discard after race",
...
  "caption_course_creator_create_new": "Create New",
  "caption_course_creator_name": "Name",
  "caption_course_creator_short_name": "Short Name",
  "text_course_creator_start_and_finish_same": "Start and finish are the same",
  "caption_course_creator_locate": "Locate Mark",
  "caption_course_creation_tracker": "Tracker",
  "caption_course_creation_location": "Location",
  "text_course_creation_no_device_assigned": "No Device Assigned",
  "text_course_creation_this_device_is_used": "This Device is Tracking",
  "text_course_creation_a_device_is_tracking": "A Device is Tracking",
  "caption_course_creation_change_device": "Change Tracking Device",
  "caption_course_creation_delete_this_mark": "Delete this Mark from Course",
  "caption_course_creator_ping_position": "Ping Current Position",
...
