...
      )
    }
  }

  public renderHint = () => {
    return (
      <View style={this.styles.hintContainer} testID="e2e-sessions-empty-hint">
        <Image
          source={
            I18n.locale.substring(0, 3) === 'de-'
              ? Images.defaults.background_empty_de
              : Images.defaults.background_empty
          }
...
      <View style={this.styles.container}>
        <View
          style={this.styles.scrollContainer}
        >
          {this.props.route?.params?.forTracking && <Text style={this.styles.headLine}>{I18n.t('text_tracking_headline')}</Text>}
          <TouchableOpacity
            testID="e2e-create-event"
            style={this.styles.createButton}
            onPress={() => this.debouncedButtonClick('CREATE', this.props.navigation)}>
            <IconText
              source={Images.actions.add}
              iconStyle={this.styles.createButtonIcon}
              textStyle={this.styles.createButtonText}
...
