...
import { getEditedCourse, hasSameStartFinish } from './course'

import { MARK_PROPERTIES_ENTITY_NAME } from 'api/schemas'

const mapIndexed = addIndex(map)

const startFinishMarks = ['Start/Finish Pin', 'Start/Finish Boat', 'Start Pin', 'Start Boat', 'Finish Pin', 'Finish Boat']

export const hasMarkProperties = (state: any) => compose(
  not,
  isEmpty)(
  getEntityArrayByType(state, MARK_PROPERTIES_ENTITY_NAME))

...
